--- a/Resturent/Views/Shared/_Layout.cshtml
+++ b/Resturent/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                                 <a class="dropdown-item" asp-action="Index" asp-controller="Category" asp-area="Admin">Category</a>
                                 <a class="dropdown-item" asp-action="Index" asp-controller="SubCategory" asp-area="Admin">Sub Category</a>
                                 <a class="dropdown-item" asp-action="Index" asp-controller="MenuItem" asp-area="Admin">MenuItem</a>
-                                <a class="dropdown-item">Coupons</a>
+                                <a class="dropdown-item" asp-action="Index" asp-controller="Coupon" asp-area="Admin">Coupons</a>
                                 <a class="dropdown-item">Users</a>
 
                             </div>
@@ -54,7 +54,7 @@
 
     <footer class="border-top footer pl-3 text-white-50" style="background-color: #A93226; ">
         <div class="container">
-            &copy; 2021 - Resturent - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - 🅴-🅱🆄🆁🅶🅴🆁 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
