--- a/Resturent/Areas/Customers/Views/Cart/Index.cshtml
+++ b/Resturent/Areas/Customers/Views/Cart/Index.cshtml
@@ -84,7 +84,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="col-12 col-lg-4 offset-lg-8 col-md-6 offset-md-6">
-                            <a asp-action="Summary" asp-area="Customer" asp-controller="Cart" class="btn btn-success form-control">Summary</a>
+                            <a asp-action="Summary" asp-area="Customers" asp-controller="Cart" class="btn btn-success form-control">Summary</a>
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
 
 @section Scripts{
     <script>
-        Rs .(function () {
+        $(function () {
             var couponCode = document.getElementById("txtCouponCode").value;
 
             if (couponCode.length > 0) {
