--- a/Resturent/Areas/Admin/Views/MenuItem/Details.cshtml
+++ b/Resturent/Areas/Admin/Views/MenuItem/Details.cshtml
@@ -15,7 +15,7 @@
                     <label asp-for="MenuItem.Name" class="col-form-label"></label>
                 </div>
                 <div class="col-8">
-                    <input asp-for="MenuItem.Name" class="form-control" />
+                    <input asp-for="MenuItem.Name" disabled class="form-control" />
                 </div>
                 <span asp-validation-for="MenuItem.Name" class="text-danger"></span>
             </div>
@@ -33,7 +33,7 @@
                     <label asp-for="MenuItem.Price" class="col-form-label"></label>
                 </div>
                 <div class="col-8">
-                    <input asp-for="MenuItem.Price" class="form-control" />
+                    <input asp-for="MenuItem.Price" disabled class="form-control" />
                 </div>
                 <span asp-validation-for="MenuItem.Price" class="text-danger"></span>
             </div>
@@ -42,7 +42,7 @@
                     <label asp-for="MenuItem.Image" class="col-form-label"></label>
                 </div>
                 <div class="col-8">
-                    <input type="file" name="files" multiple class="form-control" />
+                    <input type="file" name="files" disabled multiple class="form-control" />
                 </div>
             </div>
             <div class="form-group row">
@@ -50,7 +50,7 @@
                     <label asp-for="MenuItem.CategoryId" class="col-form-label"></label>
                 </div>
                 <div class="col-8">
-                    <select asp-for="@Model.MenuItem.CategoryId" id="CategoryId" asp-items="Model.Category.ToSelectListItem(Model.MenuItem.CategoryId)" class="form-control"></select>
+                    <select asp-for="@Model.MenuItem.CategoryId" id="CategoryId" asp-items="Model.Category.ToSelectListItem(Model.MenuItem.CategoryId)" disabled class="form-control"></select>
                 </div>
             </div>
             <div class="form-group row">
@@ -58,7 +58,7 @@
                     <label asp-for="MenuItem.SubCategoryId" class="col-form-label"></label>
                 </div>
                 <div class="col-8">
-                    <select asp-for="@Model.MenuItem.SubCategoryId" name="SubCategoryId" id="SubCategoryId" asp-items="@(new SelectList(string.Empty,"Id","Name"))" class="form-control"></select>
+                    <select asp-for="@Model.MenuItem.SubCategoryId" name="SubCategoryId" id="SubCategoryId" asp-items="@(new SelectList(string.Empty,"Id","Name"))" disabled class="form-control"></select>
                 </div>
             </div>
             <div class="form-group row">
@@ -66,7 +66,7 @@
                     <label asp-for="MenuItem.Spicyness" class="col-form-label"></label>
                 </div>
                 <div class="col-8">
-                    <select asp-for="MenuItem.Spicyness" asp-items="Html.GetEnumSelectList<Restaurent.Models.MenuItem.Spicy>()" class="form-control"></select>
+                    <select asp-for="MenuItem.Spicyness" asp-items="Html.GetEnumSelectList<Restaurent.Models.MenuItem.Spicy>()" disabled class="form-control"></select>
                 </div>
                 <span asp-validation-for="MenuItem.Name" class="text-danger"></span>
             </div>
@@ -87,8 +87,8 @@
     <script>
         tinymce.init({
             selector: 'textarea',
-            plugins: 'a11ychecker advcode casechange export formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
-            toolbar: 'a11ycheck addcomment showcomments casechange checklist code export formatpainter pageembed permanentpen table',
+            plugins: 'lists',
+            toolbar: 'a11ycheck addcomment showcomments casechange checklist code pageembed permanentpen',
             toolbar_mode: 'floating',
             tinycomments_mode: 'embedded',
             tinycomments_author: 'Author name',
