--- a/Resturent/Areas/Admin/Views/MenuItem/Index.cshtml
+++ b/Resturent/Areas/Admin/Views/MenuItem/Index.cshtml
@@ -13,10 +13,10 @@
 
     </div>
     <br />
-    <div>
+    <div id="menuitem">
         @if (Model.Count() > 0)
         {
-            <table class="table table-striped border">
+            <table id="tab_customers" class="table table-striped border">
                 <tr class="table-secondary">
                     <th>
                         @Html.DisplayNameFor(x => x.Name)
@@ -54,10 +54,31 @@
                     </tr>
                 }
             </table>
+
         }
         else
         {
             <p>No category exists...</p>
         }
     </div>
+    <br />
+    <button type="button" class="btn btn-success printtable">Print </button>
 </div>
+
+@section scripts
+    {
+    <script>
+        $(function () {
+            $(".printtable").click(function () {
+                var restorepage = document.body.innerHTML;
+                var printcontent = document.getElementById("menuitem").innerHTML;
+                document.body.innerHTML = printcontent;
+                window.print();
+                document.body.innerHTML = restorepage;
+            });
+
+
+        });
+
+    </script>
+}
