--- a/Resturent/Areas/Admin/Views/SubCategory/Index.cshtml
+++ b/Resturent/Areas/Admin/Views/SubCategory/Index.cshtml
@@ -18,7 +18,7 @@
 
     </div>
     <br />
-    <div>
+    <div id="subcategory">
         @if (Model.Count() > 0)
         {
             <table class="table table-striped border">
@@ -53,5 +53,25 @@
             <p>No Sub Category exists...</p>
         }
     </div>
+    <br />
+    <button type="button" class="btn btn-success printtable">Print </button>
 </div>
 
+
+@section scripts
+    {
+    <script>
+        $(function () {
+            $(".printtable").click(function () {
+                var restorepage = document.body.innerHTML;
+                var printcontent = document.getElementById("subcategory").innerHTML;
+                document.body.innerHTML = printcontent;
+                window.print();
+                document.body.innerHTML = restorepage;
+            });
+
+
+        });
+
+    </script>
+}
