--- a/Resturent/Views/Shared/_Layout.cshtml
+++ b/Resturent/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                                     <a class="dropdown-item" asp-action="Index" asp-controller="Category" asp-area="Admin">Category</a>
                                     <a class="dropdown-item" asp-action="Index" asp-controller="SubCategory" asp-area="Admin">Sub Category</a>
                                     <a class="dropdown-item" asp-action="Index" asp-controller="MenuItem" asp-area="Admin">MenuItem</a>
-                                    <a class="dropdown-item" asp-action="Index" asp-controller="Coupon" asp-area="Admin">Coupons</a>
+                                    @*<a class="dropdown-item" asp-action="Index" asp-controller="Coupon" asp-area="Admin">Coupons</a>*@
                                     <a class="dropdown-item" asp-action="Index" asp-controller="User" asp-area="Admin">Users</a>
 
                                 </div>
@@ -114,6 +114,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.tiny.cloud/1/0t0z81cn40bav62nn2v864nlcs3q6e6xi9worvx5z1ew97fh/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="~/js/jquery-ui.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
